sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: identifier expected but 'false' found.
		if (plusPetit(i:Int, i+1:Int) :Boolean==false) 
                                                        ^AlgBubbleSort1:11: error: ')' expected but '}' found.
		}
                ^